cmake_minimum_required(VERSION 2.8)
#set(CMAKE_VERBOSE_MAKEFILE ON)
#set(CMAKE_C_FLAGS "-lwiringPi")
project(monitor_apple)
add_subdirectory(server)
add_subdirectory(tools)
set(APP_SRC main.c)
add_executable(monitor_apple ${APP_SRC})
target_link_libraries(monitor_apple -lwiringPi libserver libinit_d)
